--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -1,23 +1,73 @@
 <%= form_with model: prototype, local: true do |f|%>
-  <%= render 'error_messages', model: f.object %>
+  <%= render 'layouts/error_messages', model: f.object %>
   <div class="field">
     <%= f.label :price, "価格" %><br />
     <%= f.number_field :price, id:"prototype_price" %>
   </div>
 
   <div class="field">
-    <%= f.label :hoge, "キャッチコピー" %><br />
-    <%= f.text_area :hoge, class: :form__text, id:"prototype_catch_copy" %>
+    <%= f.label :car_maker, "メーカー" %><br />
+    <%= f.text_field :car_maker, class: :form__text, id:"prototype_car_maker" %>
   </div>
 
   <div class="field">
-    <%= f.label :hoge, "コンセプト" %><br />
-    <%= f.text_area :hoge, class: :form__text, id:"prototype_concept" %>
+    <%= f.label :car_model, "車種" %><br />
+    <%= f.text_field :car_model, class: :form__text, id:"prototype_car_model" %>
   </div>
 
   <div class="field">
-    <%= f.label :hoge, "プロトタイプの画像" %><br />
-    <%= f.file_field :hoge, id:"prototype_image" %>
+    <%= f.label :car_grade, "グレード" %><br />
+    <%= f.text_field :car_grade, class: :form__text, id:"prototype_car_grade" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :body_color, "カラー" %><br />
+    <%= f.text_field :body_color, class: :form__text, id:"prototype_body_color" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :vi_number, "型式番号" %><br />
+    <%= f.text_field :vi_number, class: :form__text, id:"prototype_vi_number" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :year, "年式" %><br />
+    <%= f.number_field :year, id:"prototype_year" %>
+  </div>
+
+    <div class="field">
+    <%= f.label :mileage, "走行距離" %><br />
+    <%= f.number_field :mileage, id:"prototype_mileage" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :drive_system, "ミッション" %><br />
+    <%= f.text_field :drive_system, class: :form__text, id:"prototype_drive_system" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :transmission, "駆動方式" %><br />
+    <%= f.text_field :transmission, class: :form__text, id:"prototype_transmission" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :inspection, "車検期日" %><br />
+    <%= f.text_field :inspection, class: :form__text, id:"prototype_inspection" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :comment, "コメント" %><br />
+    <%= f.text_area :comment, class: :form__text, id:"prototype_comment" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :image, "プロトタイプの画像" %><br />
+    <%= f.file_field :image, id:"prototype_image" %>
+    <div id="image_section" class="prototype__image">
+      <% if !prototype.image.blank? %>
+        <%= image_tag prototype.image, id:"image_content"%>
+      <% end %>
+    </div>
   </div>
 
   <div class="actions">
