--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,41 +5,41 @@
 
         <%# 「モデル名」にはUserモデルであれば@userを渡しましょう。%>
         <%# 「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
-        <%= form_with model: モデル名, url: 新規登録機能へのパス, local: true do |f| %>
+        <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
 
         <div class="field">
-          <%= f.label :hoge, "メールアドレス" %><br />
-          <%= f.email_field :hoge, id:"user_email", autofocus: true, autocomplete: "email" %>
+          <%= f.label :email, "メールアドレス" %><br />
+          <%= f.email_field :email, id:"user_email", autofocus: true, autocomplete: "email" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "パスワード（6文字以上）" %><br />
-          <%= f.password_field :hoge, id:"user_password", autocomplete: "new-password" %>
+          <%= f.label :password, "パスワード（6文字以上）" %><br />
+          <%= f.password_field :password, id:"user_password", autocomplete: "new-password" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "パスワード再入力" %><br />
+          <%= f.label :password_confirmation, "パスワード再入力" %><br />
           <%= f.password_field :password_confirmation, id:"user_password_confirmation", autocomplete: "new-password" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "ユーザー名" %><br />
-          <%= f.text_field :hoge, id:"user_name" %>
+          <%= f.label :shop_name, "店舗名" %><br />
+          <%= f.text_field :shop_name, id:"shop_name" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "プロフィール" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_profile" %>
+          <%= f.label :person_name, "担当者名" %><br />
+          <%= f.text_field :person_name,  id:"person_name" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "所属" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_occupation" %>
+          <%= f.label :address, "住所" %><br />
+          <%= f.text_field :address, id:"address" %>
         </div>
 
         <div class="field">
-          <%= f.label :hoge, "役職" %><br />
-          <%= f.text_area :hoge, class: :form__text, id:"user_position" %>
+          <%= f.label :phone_number, "電話番号" %><br />
+          <%= f.number_field :phone_number, class: :form__text, id:"user_position" %>
         </div>
 
         <div class="actions">
