ユーザー詳細ページの実装

--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -5,6 +5,6 @@
     <p class="card__summary">
       <%= prototype.car_model %>
     </p>
-    <%= link_to "by " + prototype.user.shop_name, root_path, class: :card__user %>
+    <%= link_to "by " + prototype.user.shop_name, user_path(prototype.user.id), class: :card__user %>
   </div>
 </div>
