--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,33 +2,35 @@
   <div class="inner">
     <div class="user__wrapper">
       <h2 class="page-heading">
-        <%= "ユーザー名さんの情報"%>
+        <%= @user.shop_name + "さんの情報"%>
       </h2>
       <table class="table">
         <tbody>
           <tr>
-            <th class="table__col1">名前</th>
-            <td class="table__col2"><%= "ユーザー名" %></td>
+            <th class="table__col1">店舗名</th>
+            <td class="table__col2"><%= @user.shop_name %></td>
           </tr>
           <tr>
-            <th class="table__col1">プロフィール</th>
-            <td class="table__col2"><%= "ユーザーのプロフィール" %></td>
+            <th class="table__col1">担当者名</th>
+            <td class="table__col2"><%= @user.person_name %></td>
           </tr>
           <tr>
-            <th class="table__col1">所属</th>
-            <td class="table__col2"><%= "ユーザーの所属" %></td>
+            <th class="table__col1">住所</th>
+            <td class="table__col2"><%= @user.address %></td>
           </tr>
           <tr>
-            <th class="table__col1">役職</th>
-            <td class="table__col2"><%= "ユーザーの役職" %></td>
+            <th class="table__col1">電話番号</th>
+            <td class="table__col2"><%= @user.phone_number %></td>
           </tr>
         </tbody>
       </table>
       <h2 class="page-heading">
-        <%= "ユーザー名さんのプロトタイプ"%>
+        <%= @user.shop_name + "さんのプロトタイプ"%>
       </h2>
       <div class="user__card">
-        <%# 部分テンプレートでそのユーザーが投稿したプロトタイプ投稿一覧を表示する %>
+        <% @prototypes.each do |prototype| %>
+          <%= render partial: "/prototypes/prototype", locals: { prototype: prototype }  %>
+        <% end %>
       </div>
     </div>
   </div>
