プロトタイプ詳細表示機能の実装

--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -26,7 +26,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :vi_number, "型式番号" %><br />
+    <%= f.label :vi_number, "型式" %><br />
     <%= f.text_field :vi_number, class: :form__text, id:"prototype_vi_number" %>
   </div>
 
