--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -2,33 +2,82 @@
   <div class="inner">
     <div class="prototype__wrapper">
       <p class="prototype__hedding">
-        <%= "プロトタイプのタイトル"%>
+        <%= @prototype.car_maker %>
+        <%= @prototype.car_model %>
       </p>
-      <%= link_to "by プロトタイプの投稿者", root_path, class: :prototype__user %>
-      <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
+      <%= link_to "by" + @prototype.user.shop_name, user_path(@prototype.user.id), class: :prototype__user %>
+      <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
-          <%= link_to "編集する", root_path, class: :prototype__btn %>
-          <%= link_to "削除する", root_path, class: :prototype__btn %>
+          <%#= link_to "編集する", edit_prototype_path(@prototype.id), method: :get, class: :prototype__btn %>
+          <%#= link_to "削除する", prototype_path(@prototype.id), method: :delete, class: :prototype__btn %>
         </div>
-      <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
+      <% end %>
       <div class="prototype__image">
-        <%= image_tag "プロトタイプの画像" %>
+        <%= image_tag @prototype.image %>
       </div>
       <div class="prototype__body">
         <div class="prototype__detail">
-          <p class="detail__title">キャッチコピー</p>
+          <p class="detail__title">価格</p>
           <p class="detail__message">
-            <%= "プロトタイプのキャッチコピー" %>
+            <%= @prototype.price %>
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">コンセプト</p>
+          <p class="detail__title">グレード</p>
           <p class="detail__message">
-            <%= "プロトタイプのコンセプト" %>
+            <%= @prototype.car_grade %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">カラー</p>
+          <p class="detail__message">
+            <%= @prototype.body_color %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">型式</p>
+          <p class="detail__message">
+            <%= @prototype.vi_number %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">年式</p>
+          <p class="detail__message">
+            <%= @prototype.year %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">走行距離</p>
+          <p class="detail__message">
+            <%= @prototype.mileage %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">ミッション</p>
+          <p class="detail__message">
+            <%= @prototype.drive_system %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">駆動方式</p>
+          <p class="detail__message">
+            <%= @prototype.transmission %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">車検</p>
+          <p class="detail__message">
+            <%= @prototype.inspection %>
+          </p>
+        </div>
+        <div class="prototype__detail">
+          <p class="detail__title">コメント</p>
+          <p class="detail__message">
+            <%= @prototype.comment %>
           </p>
         </div>
       </div>
-      <div class="prototype__comments">
+      <!--div class="prototype__comments">                                                コメントアウトしてます。
         <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
           <%# <%= form_with model: モデル名,local: true do |f|%>
             <div class="field">
@@ -48,7 +97,7 @@
             </li>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
         </ul>
-      </div>
+      </div-->
     </div>
   </div>
 </main>
