--- a/app/views/prototypes/edit.html.erb
+++ b/app/views/prototypes/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="main">
   <div class="inner">
     <div class="form__wrapper">
-      <h2 class="page-heading">プロトタイプ編集</h2>
-      <%# 部分テンプレートでフォームを表示する %>
+      <h2 class="page-heading">車両情報編集</h2>
+        <%= render partial: 'form', locals: { prototype: @prototype } %>
     </div>
   </div>
 </div>
