--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -61,7 +61,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :image, "プロトタイプの画像" %><br />
+    <%= f.label :image, "車両の画像" %><br />
     <%= f.file_field :image, id:"prototype_image" %>
     <div id="image_section" class="prototype__image">
       <% if !prototype.image.blank? %>
