--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -19,7 +19,7 @@
         <div class="prototype__detail">
           <p class="detail__title">価格</p>
           <p class="detail__message">
-            <%= @prototype.price %>
+            <%= @prototype.price %>円
           </p>
         </div>
         <div class="prototype__detail">
@@ -49,7 +49,7 @@
         <div class="prototype__detail">
           <p class="detail__title">走行距離</p>
           <p class="detail__message">
-            <%= @prototype.mileage %>
+            <%= @prototype.mileage %>km
           </p>
         </div>
         <div class="prototype__detail">
@@ -65,7 +65,7 @@
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">車検</p>
+          <p class="detail__title">車検期日</p>
           <p class="detail__message">
             <%= @prototype.inspection %>
           </p>
